added basic animation

--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
             <div class="container">
                 <div class="row">
                     <div class="hero-info">
-                        <div class="content-holder">
+                        <div class="content-holder animate-content">
                             <h1 class="headline">Upto 20% off</h1>
                             <div class="sub-headline">
-                                Discover the wisdom of Ayurveda with "Ayurveda 101,"your
-                                essential guide to holistic health and wellness.Ideal for BAMS students, medical
-                                beginners,and anyone interested in natural health practices.
+                                Discover the wisdom of Ayurveda with "Ayurveda 101," your
+                                essential guide to holistic health and wellness. Ideal for BAMS students, medical
+                                beginners, and anyone interested in natural health practices.
                             </div>
-
                             <div class="hero-btn">
                                 <button class="badge hero-btn1">Buy for $13</button>
                                 <button class="badge hero-btn2">Learn More</button>
                             </div>
-                        </div><!--info-hero-->
+                        </div>
+                        <!--info-hero-->
                         <div class="book-holder">
                             <div class="book-ved"><img src="./assests/book1.png" alt="Ayurveda 101 Book"></div>
                             <div class="stand"><img src="./assests/stand.png" alt="Book Stand"></div>
@@ -60,7 +60,7 @@
 
     <!-- icons section starts  -->
 
-<section class="icon-section">
+<section class="icon-section animate-icons">
     <div class="icons">
         <i class="fa-solid fa-truck-fast"></i>
         <div class="content">
@@ -98,7 +98,7 @@
 <!-- icons section ends -->
 <!--benefit section-->
 <section class="benefit-section">
-    <div class="benefit-container">
+    <div class="benefit-container animate-benefits">
         <h2 class="benefit-heading">What Will You Get From This Book?</h2>
         <div class="benefit-head-intro">
             In "Ayurvedic 101," you'll gain practical insights into Ayurvedic principles, herbal remedies, dietary guidelines, and self-care practices. Ideal for BAMS students, medical beginners, and anyone interested in natural health practices, this book is your guide to holistic well-being.
